feat(app)!: migrate REST API to OffsetDateTime
- Replace LocalDateTime with OffsetDateTime in Controllers, DTOs, and Validators to enable cross-timezone routing support.
- Update endpoint signatures and tests to handle ISO-8601 dates with offsets.

BREAKING CHANGE: API endpoints now require and return date-time strings with timezone offsets.

Refs: #422